[gd_scene load_steps=7 format=3 uid="uid://de0lvhq2o0dq2"]

[ext_resource type="Script" uid="uid://fegofevmxus0" path="res://scenes/title_screen.gd" id="1_e54dn"]
[ext_resource type="VideoStream" uid="uid://cu0lor38t8ui" path="res://videos/title_screen.ogv" id="1_fgkus"]
[ext_resource type="Script" uid="uid://cv38hxv4yjsei" path="res://scripts/menuScripts/video_stream_player.gd" id="2_sa3yf"]
[ext_resource type="AudioStream" uid="uid://ssqmaqhkxykj" path="res://sound/AbandonedVillage.mp3" id="3_s4lrb"]
[ext_resource type="Texture2D" uid="uid://bdv06hcxax0qa" path="res://art/ui/start.PNG" id="4_dc4i4"]
[ext_resource type="Texture2D" uid="uid://dr74vqhxro3s0" path="res://art/ui/end.PNG" id="5_e54dn"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e54dn")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 1788.0
offset_bottom = 1068.0
scale = Vector2(0.2, 0.2)
stream = ExtResource("1_fgkus")
autoplay = true
script = ExtResource("2_sa3yf")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_s4lrb")
autoplay = true

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 56.0
offset_right = 95.0
offset_bottom = 76.0

[node name="Sprite2D" type="Sprite2D" parent="StartButton"]
position = Vector2(31, 10)
scale = Vector2(0.0543912, 0.0808233)
texture = ExtResource("4_dc4i4")

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 85.0
offset_right = 95.0
offset_bottom = 106.0

[node name="Sprite2D" type="Sprite2D" parent="QuitButton"]
position = Vector2(31, 10)
scale = Vector2(0.0571121, 0.0692379)
texture = ExtResource("5_e54dn")

[node name="ButtonTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="ButtonTimer" to="." method="_on_timer_timeout"]
